# cool_crt_thingies

oscilloscope/: CMakeLists.txt
oscilloscope/ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  oscilloscope
oscilloscope/src/: main.cpp
